<resources>
    <string name="app_name">孜点教师</string>
    <string name="version">%1$s版本</string>
    <!--Welcome-->
    <string name="slogan_text">孜孜不倦，点点滴滴</string>
    <!--LoginActivity-->
    <string name="input_username_please">请输入用户名</string>
    <string name="input_password_please">请输入密码</string>
    <string name="select_school_please">请选择您所在的学校</string>
    <string name="login">登录</string>
    <string name="login_loading">正在登陆</string>
    <string name="login_welcome">欢迎进入&#160;&#160;孜点教育</string>
    <!--MainActivity-->
    <string name="main_course">课程</string>
    <string name="main_evaluate">教评</string>
    <string name="main_questionnaire">问卷</string>
    <string name="main_mine">我的</string>
    <!--CourseFragment-->
    <string name="course_week">第%1$d周</string>
    <!--CourseInfoActivity-->
    <string name="course_info">课程信息</string>
    <string name="course_name">课程名称:&#160;%1$s</string>
    <string name="course_location">上课地点:&#160;%1$s</string>
    <string name="course_current_week">当前周数:&#160;%1$s</string>
    <string name="attendance">本节考勤</string>
    <string name="attendance_statistics">考勤统计</string>
    <!--AttendanceActivity-->
    <string name="attendance_loading">正在提交考勤信息…</string>
    <string name="attendance_succeed">提交成功</string>

    <!--Evaluate-->
    <string name="evaluate_manage">教评管理</string>
    <!--ColleagueEvaActivity-->
    <string name="colleague_evaluate">同行评价</string>
    <string name="colleague_invite_others">邀请</string>
    <string name="colleague_evaluate_others">评价他人</string>
    <string name="introduce_invite">邀请指定的教师对自己的课程进行评价。</string>
    <string name="introduce_evaluate">向行课教师发起评价其课程的请求，若获得对方的同意则开始评价。</string>
    <string name="apply_evaluate_me">评我的课</string>
    <string name="evaluate_his_course">我评他的课</string>
    <string name="evaluate_my_course">评我的课</string>
    <string name="someone_evaluate_my_course">%1$s评我的课</string>
    <string name="evaluate_others_course">评%1$s的课</string>
    <string name="others_course">%1$s的课</string>
    <string name="my_course">我的课</string>
    <!--Questionnaire-->
    <!--MyQuestionnaire-->
    <string name="my_questionnaire_complete">%1$d/%2$d</string>
    <string name="my_ques_detail_complete">已填写:&#160;%1$d人</string>
    <string name="my_ques_num">%1$d.&#160;%2$s</string>
    <string name="option_count">%1$d人</string>
    <!--Mine-->
    <string name="mine_student_eva_me">学生评我次数</string>
    <string name="mine_supervisor_evaluate_me">督导评我次数</string>
    <string name="mine_information">个人资料</string>
    <string name="mine_change_password">密码修改</string>
    <string name="mine_logout">退出登录</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="mine_about">关于孜点</string>
    <!--ChangeInfoActivity-->
    <string name="info_change_portrait">修改头像</string>
    <string name="info_nickname">昵称</string>
    <string name="info_sex">性别</string>
    <string name="info_birthday">生日</string>
    <string name="info_age">年龄</string>
    <string name="info_phone_number">手机号码</string>
    <string name="info_motto">个性签名</string>
    <string name="change_person_info">编辑个人资料</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="please_choose_sex">请选择性别</string>
    <string name="please_choose_date">请选择日期</string>
    <string name="cancel">取消</string>
    <array name="sex">
        <item>男</item>
        <item>女</item>
    </array>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="please_input_motto">请输入个性签名</string>
    <string name="birthday">%1$d-%2$d-%3$d</string>
    <!--ChangePasswordActivity-->
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="change_password_loading">加载中…</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="entered_password_diff">两次输入密码不一致</string>
    <!--FeedbackActivity-->
    <string name="feedback_hint_text">填写意见、建议（限500字以内）</string>
    <string name="feedback_loading">提交中…</string>
    <string name="feedback_succeed">意见反馈成功</string>
    <!--CourseFragment-->
    <string-array name="weekdays">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </string-array>
    <!--AboutActivity-->
    <string name="about">关于孜点</string>
    <string name="about_zidian">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;“孜点”是国内第一个跨接高校与社会的智慧教育动态监测数据平台。
     \n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;“孜点”以智慧教育为核心，建立了打通人才培养全过程的大数据分析系统，助力高校构建教学评估的内部质量保证体系和外部质量保障体系。
        \n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;“孜点”依托现代教育测评技术、学习分析和教育数据挖掘技术为用户提供“有用又有趣”的数据服务，使多主体深入互动，进而形成从社会需求到人才培养、
        从招生到就业、从教学到育人的教育新生态。</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
