<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@drawable/login_logo"
        tools:ignore="ContentDescription" />

    <com.zidian.teacher.ui.widget.ClearEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/ic_clear_24dp"
        android:hint="@string/input_username_please"
        android:padding="10dp"
        android:textColor="@color/dark_text_color"
        android:textSize="17sp" />

    <com.zidian.teacher.ui.widget.ClearEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/ic_clear_24dp"
        android:hint="@string/input_password_please"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/dark_text_color"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/ll_select_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_touch_bg"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_school" />

        <TextView
            android:id="@+id/tv_school"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/ic_chevron_right_24dp"
            android:hint="请选择学校"
            android:paddingLeft="5dp"
            android:textSize="17sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_login_btn"
        android:text="@string/login"
        android:textColor="@color/white_text_color"
        android:textSize="@dimen/text_size_h2" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/login_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/login_welcome"
            android:textColor="@color/white_text_color"
            android:textSize="@dimen/text_size_h2" />
    </FrameLayout>
</LinearLayout>
